added cleaners for ski house. Added york subdirectory for york st rental

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 recreation.html
 important.html
 ski.html
@@ -5,3 +7,11 @@ rules.html
 skicalendar.html
 house.html
 directions.html
+cleaners.html
+
+york/important.html
+york/rules.html
+york/house.html
+york/lease.html
+york/ad.html
+york/supplies.html
