updated ski info for 2021-2022 season

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ skicalendar.html
 house.html
 directions.html
 cleaners.html
+ad.html
+lease.html
+supplies.html
 
 york/important.html
 york/rules.html
